--- a/Singapore_demographic_analysis/singapore_demography.Rmd
+++ b/Singapore_demographic_analysis/singapore_demography.Rmd
@@ -70,27 +70,20 @@ sgpop$AG_mid <- recode(sgpop$AG,
 ## let's do singapore as a whole
 ```{r}
 sgpop %>%
-  group_by(SZ, Time) %>%
-  mutate(SZ_total = sum(Pop)) %>% 
-  mutate(share=100*Pop/SZ_total) %>%
-  group_by(SZ, Time, AG_mid) %>%
-  summarise(AG_SZ_share=sum(share)) %>% 
-  filter(((Time==2004)|(Time==2009)|(Time==2014)|(Time==2019))) %>% 
-  
-```
-
-
-
-```{r}
-
-p <- ggplot(data=age_groups_SZ, mapping=aes(x=AG_mid, y=SZ, fill=AG_SZ_share))
-p + geom_tile(colour="white", size=.2) +
+  group_by(Time) %>%
+  mutate(total = sum(Pop)) %>% 
+  mutate(share=100*Pop/total) %>%
+  group_by(Time, AG_mid) %>%
+  summarise(AG_share=sum(share)) %>% 
+  # filter(((Time==200)|(Time==2005)|(Time==2010)|(Time==2015)|(Time==2019))) %>% 
+  ggplot(data=., mapping=aes(x=AG_mid, y=Time, fill=AG_share))+
+  geom_tile(colour="white", size=.2) +
   labs(
     x="Age groups",
     y="",
-    title="Planning areas in Singapore have different demographics",
+    title="Age composition in Singapore 2000-2019",
     fill = "Share of age group",
-    caption="Data: Singapore Department of Statistics, 2020."
+    caption="Data: Singapore Government, 2020"
     ) +
   theme(legend.position='bottom',
         panel.grid=element_blank(),
@@ -98,7 +91,116 @@ p + geom_tile(colour="white", size=.2) +
         legend.key.height = unit(.6,"line")
         ) +
   scale_fill_viridis(discrete=FALSE, option="B", labels = comma)
+
+ggsave("Age_Heatmap_Singapore.png",dpi=400)
+
+  
 ```
+
+## let's do central region
+```{r}
+central_region<-c('Queenstown',
+                  'Bukit Timah',
+                  'Novena','Bishan',
+                  'Toa Payoh',
+                  'Geylang',
+                  'Kallang',
+                  'Marine Parade',
+                  'Sourthern Islands',
+                  'Downtown Core',
+                  'Straits View',
+                  'Marina South',
+                  'Marina East',
+                  'Rochor',
+                  'Newton',
+                  'Tanglin',
+                  'Museum',
+                  'Outram',
+                  'River Valley',
+                  'Singapore River'
+                  )
+
+sgpop %>%
+  filter(PA %in% central_region) %>%
+  group_by(Time) %>%
+  mutate(total = sum(Pop)) %>% 
+  mutate(share=100*Pop/total) %>%
+  group_by(Time, AG_mid) %>%
+  summarise(AG_share=sum(share)) %>% 
+  ggplot(data=., mapping=aes(x=AG_mid, y=Time, fill=AG_share))+
+  geom_tile(colour="white", size=.2) +
+  labs(
+    x="Age groups",
+    y="",
+    title="Age composition in Central Region 2000-2019",
+    fill = "Share of age group",
+    caption="Data: Singapore Government, 2020"
+    ) +
+  theme(legend.position='bottom',
+        panel.grid=element_blank(),
+        legend.key.width = unit(4,"line"),
+        legend.key.height = unit(.6,"line")
+        ) +
+  scale_fill_viridis(discrete=FALSE, option="B", labels = comma)
+
+ggsave("Age_Heatmap_Central_Region.png",dpi=400)
+```
+
+## let's do Bukit Merah
+```{r}
+sgpop %>%
+  filter(PA == 'Bukit Merah') %>%
+  group_by(Time) %>%
+  mutate(total = sum(Pop)) %>% 
+  mutate(share=100*Pop/total) %>%
+  group_by(Time, AG_mid) %>%
+  summarise(AG_share=sum(share)) %>% 
+  ggplot(data=., mapping=aes(x=AG_mid, y=Time, fill=AG_share))+
+  geom_tile(colour="white", size=.2) +
+  labs(
+    x="Age groups",
+    y="",
+    title="Age composition in Bukit Merah 2000-2019",
+    fill = "Share of age group",
+    caption="Data: Singapore Government, 2020"
+    ) +
+  theme(legend.position='bottom',
+        panel.grid=element_blank(),
+        legend.key.width = unit(4,"line"),
+        legend.key.height = unit(.6,"line")
+        ) +
+  scale_fill_viridis(discrete=FALSE, option="B", labels = comma)
+
+ggsave("Age_Heatmap_Bukit_Merah.png",dpi=400)
+```
+## let's do central region
+```{r}
+sgpop %>%
+  filter(SZ=='Maritime Square') %>%
+  group_by(Time) %>%
+  mutate(total = sum(Pop)) %>% 
+  mutate(share=100*Pop/total) %>%
+  group_by(Time, AG_mid) %>%
+  summarise(AG_share=sum(share)) %>% 
+  ggplot(data=., mapping=aes(x=AG_mid, y=Time, fill=AG_share))+
+  geom_tile(colour="white", size=.2) +
+  labs(
+    x="Age groups",
+    y="",
+    title="Age composition in Maritime Square 2000-2019",
+    fill = "Share of age group",
+    caption="Data: Singapore Government, 2020"
+    ) +
+  theme(legend.position='bottom',
+        panel.grid=element_blank(),
+        legend.key.width = unit(4,"line"),
+        legend.key.height = unit(.6,"line")
+        ) +
+  scale_fill_viridis(discrete=FALSE, option="B", labels = comma)
+
+ggsave("Age_Heatmap_Maritime_Square.png",dpi=400)
+```
+
 
 
 
