store apikey to gitignore

--- a/Singapore_demographic_analysis/flickr_singapore.ipynb
+++ b/Singapore_demographic_analysis/flickr_singapore.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598931199498",
+   "name": "python_defaultSpec_1599034992261",
    "display_name": "Python 3.7.4 64-bit ('base': conda)"
   }
  },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,8 @@
     "import bs4 as bs\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "import time"
+    "import time\n",
+    "from flickr_apikey import api_key_1, secret_1, api_key_2, secret_2, api_key_3, secret_3, api_key_4, secret_4"
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
     "            # create a flickr object, search photos, and store the result\n",
     "            if page%4==0:\n",
     "                flickr = flickrapi.FlickrAPI(api_key_1,secret=secret_1)\n",
-    "                result=flickr.photos.search(api_key=api_key,\n",
+    "                result=flickr.photos.search(api_key=api_key_1,\n",
     "                                    tags=tag,\n",
     "                                    bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
     "                                    accuracy=16, # the highest accruacy of location\n",
@@ -87,7 +88,7 @@
     "                                    )\n",
     "            elif page%4==1:\n",
     "                flickr = flickrapi.FlickrAPI(api_key_2,secret=secret_2)\n",
-    "                result=flickr.photos.search(api_key=api_key,\n",
+    "                result=flickr.photos.search(api_key=api_key_2,\n",
     "                                    tags=tag,\n",
     "                                    bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
     "                                    accuracy=16, # the highest accruacy of location\n",
@@ -100,7 +101,7 @@
     "\n",
     "            elif page%4==2:\n",
     "                flickr = flickrapi.FlickrAPI(api_key_3,secret=secret_3)\n",
-    "                result=flickr.photos.search(api_key=api_key,\n",
+    "                result=flickr.photos.search(api_key=api_key_3,\n",
     "                                    tags=tag,\n",
     "                                    bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
     "                                    accuracy=16, # the highest accruacy of location\n",
@@ -113,7 +114,7 @@
     "\n",
     "            else:\n",
     "                flickr = flickrapi.FlickrAPI(api_key_4,secret=secret_4)\n",
-    "                result=flickr.photos.search(api_key=api_key,\n",
+    "                result=flickr.photos.search(api_key=api_key_4,\n",
     "                                    tags=tag,\n",
     "                                    bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
     "                                    accuracy=16, # the highest accruacy of location\n",
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -202,24 +203,23 @@
     {
      "output_type": "stream",
      "name": "stderr",
-     "text": "\nlocation: 100%|██████████| 250/250 [01:42<00:00,  2.44it/s]\n\nlocation:  25%|██▌       | 63/250 [00:26<01:19,  2.35it/s]\nlocation: 100%|██████████| 250/250 [01:37<00:00,  2.55it/s]\n\nlocation: 100%|██████████| 221/221 [01:36<00:00,  2.30it/s]\n\nouter_loop: 48it [05:00,  6.32s/it]\u001b[A\n\u001b[A"
+     "text": "\nouter_loop:   0%|          | 0/16 [00:00<?, ?it/s]\u001b[A"
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'api_key' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-982e36c44aea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m# run the function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mflickr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi_key_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecret_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecret_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecret_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key_4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecret_4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-b1757af38fb9>\u001b[0m in \u001b[0;36mflickr\u001b[0;34m(api_key_1, secret_1, api_key_2, secret_2, api_key_3, secret_3, api_key_4, secret_4, tags)\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mpage\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m                 \u001b[0mflickr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mflickrapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFlickrAPI\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi_key_2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msecret\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msecret_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m                 result=flickr.photos.search(api_key=api_key,\n\u001b[0m\u001b[1;32m     25\u001b[0m                                     \u001b[0mtags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m                                     \u001b[0mbbox\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'103.6920359,1.1304753,104.0120359,1.4504753'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'api_key' is not defined"
+     ]
     }
    ],
    "source": [
     "if __name__ =='__main__':\n",
-    "    # necessary api_key and secret\n",
-    "    api_key_1='c1213a3e48a6f81b770b75886c9b8f36'\n",
-    "    secret_1='313004d2386767a7'\n",
-    "\n",
-    "    api_key_2='255ee55bc083a85e5feda88bee22361a'\n",
-    "    secret_2='9e8960ceafee1933'\n",
-    "\n",
-    "    api_key_3='d95f0ac759a6b49ad6eb8a441f98fded'\n",
-    "    secret_3='63789115ef767db9'\n",
-    "\n",
-    "    api_key_4='9616df677ea194562fe56ed83c594e11'\n",
-    "    secret_4='37517485008e26c8'\n",
-    "\n",
     "    # tags\n",
     "    tags=[\n",
     "        'nature',\n",
@@ -233,6 +233,13 @@
     "    # run the function\n",
     "    flickr(api_key_1, secret_1, api_key_2, secret_2, api_key_3, secret_3, api_key_4, secret_4, tags)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
