--- a/Singapore_demographic_analysis/flickr_singapore.ipynb
+++ b/Singapore_demographic_analysis/flickr_singapore.ipynb
@@ -56,7 +56,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The function"
+    "# functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## get the photo function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_photo(page, per_page):\n",
+    "    if page%4==0:\n",
+    "        flickr = flickrapi.FlickrAPI(api_key_1,secret=secret_1)\n",
+    "        result=flickr.photos.search(api_key=api_key_1,\n",
+    "                            tags=tag,\n",
+    "                            bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
+    "                            accuracy=16, # the highest accruacy of location\n",
+    "                            has_geo=1,\n",
+    "                            geo_context=2, # outdoor photo\n",
+    "                            content_type=1, # includes only photos\n",
+    "                            per_page=per_page,\n",
+    "                            page=page\n",
+    "                            )\n",
+    "    elif page%4==1:\n",
+    "        flickr = flickrapi.FlickrAPI(api_key_2,secret=secret_2)\n",
+    "        result=flickr.photos.search(api_key=api_key_2,\n",
+    "                            tags=tag,\n",
+    "                            bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
+    "                            accuracy=16, # the highest accruacy of location\n",
+    "                            has_geo=1,\n",
+    "                            geo_context=2, # outdoor photo\n",
+    "                            content_type=1, # includes only photos\n",
+    "                            per_page=per_page,\n",
+    "                            page=page\n",
+    "                            )\n",
+    "\n",
+    "    elif page%4==2:\n",
+    "        flickr = flickrapi.FlickrAPI(api_key_3,secret=secret_3)\n",
+    "        result=flickr.photos.search(api_key=api_key_3,\n",
+    "                            tags=tag,\n",
+    "                            bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
+    "                            accuracy=16, # the highest accruacy of location\n",
+    "                            has_geo=1,\n",
+    "                            geo_context=2, # outdoor photo\n",
+    "                            content_type=1, # includes only photos\n",
+    "                            per_page=per_page,\n",
+    "                            page=page\n",
+    "                            )\n",
+    "\n",
+    "    else:\n",
+    "        flickr = flickrapi.FlickrAPI(api_key_4,secret=secret_4)\n",
+    "        result=flickr.photos.search(api_key=api_key_4,\n",
+    "                            tags=tag,\n",
+    "                            bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
+    "                            accuracy=16, # the highest accruacy of location\n",
+    "                            has_geo=1,\n",
+    "                            geo_context=2, # outdoor photo\n",
+    "                            content_type=1, # includes only photos\n",
+    "                            per_page=per_page,\n",
+    "                            page=page\n",
+    "                            )\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## get the location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_location(list):\n",
+    "    # Getting location data\n",
+    "    list_lat=[]\n",
+    "    list_lon=[]\n",
+    "    api_condition=0\n",
+    "    for id in tqdm(list, desc='location',position=0, leave=True):\n",
+    "        if api_condition%4==0:\n",
+    "            result_location=flickr.photos.geo.getLocation(api_key=api_key_1,photo_id=id)\n",
+    "        elif api_condition%4==1:\n",
+    "            result_location=flickr.photos.geo.getLocation(api_key=api_key_2,photo_id=id)\n",
+    "        elif api_condition%4==2:\n",
+    "            result_location=flickr.photos.geo.getLocation(api_key=api_key_3,photo_id=id)\n",
+    "        else:\n",
+    "            result_location=flickr.photos.geo.getLocation(api_key=api_key_4,photo_id=id)\n",
+    "        str_result_location=tostring(result_location, pretty_print=True).strip()\n",
+    "        soup=bs.BeautifulSoup(str_result_location,'lxml')\n",
+    "        latitude=soup.find('location')['latitude']\n",
+    "        longitude=soup.find('location')['longitude']\n",
+    "        list_lat.append(latitude)\n",
+    "        list_lon.append(longitude)\n",
+    "\n",
+    "        # update the condition\n",
+    "        api_condition+=1\n",
+    "    return list_lat, list_lon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## overarching function"
    ]
   },
   {
@@ -72,58 +185,10 @@
     "        page=1\n",
     "        pbar = tqdm(total=16,desc='outer_loop',position=1, leave=False)\n",
     "\n",
+    "        \n",
     "        while page <=16:\n",
-    "            # create a flickr object, search photos, and store the result\n",
-    "            if page%4==0:\n",
-    "                flickr = flickrapi.FlickrAPI(api_key_1,secret=secret_1)\n",
-    "                result=flickr.photos.search(api_key=api_key_1,\n",
-    "                                    tags=tag,\n",
-    "                                    bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
-    "                                    accuracy=16, # the highest accruacy of location\n",
-    "                                    has_geo=1,\n",
-    "                                    geo_context=2, # outdoor photo\n",
-    "                                    content_type=1, # includes only photos\n",
-    "                                    per_page=250,\n",
-    "                                    page=page\n",
-    "                                    )\n",
-    "            elif page%4==1:\n",
-    "                flickr = flickrapi.FlickrAPI(api_key_2,secret=secret_2)\n",
-    "                result=flickr.photos.search(api_key=api_key_2,\n",
-    "                                    tags=tag,\n",
-    "                                    bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
-    "                                    accuracy=16, # the highest accruacy of location\n",
-    "                                    has_geo=1,\n",
-    "                                    geo_context=2, # outdoor photo\n",
-    "                                    content_type=1, # includes only photos\n",
-    "                                    per_page=250,\n",
-    "                                    page=page\n",
-    "                                    )\n",
-    "\n",
-    "            elif page%4==2:\n",
-    "                flickr = flickrapi.FlickrAPI(api_key_3,secret=secret_3)\n",
-    "                result=flickr.photos.search(api_key=api_key_3,\n",
-    "                                    tags=tag,\n",
-    "                                    bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
-    "                                    accuracy=16, # the highest accruacy of location\n",
-    "                                    has_geo=1,\n",
-    "                                    geo_context=2, # outdoor photo\n",
-    "                                    content_type=1, # includes only photos\n",
-    "                                    per_page=250,\n",
-    "                                    page=page\n",
-    "                                    )\n",
-    "\n",
-    "            else:\n",
-    "                flickr = flickrapi.FlickrAPI(api_key_4,secret=secret_4)\n",
-    "                result=flickr.photos.search(api_key=api_key_4,\n",
-    "                                    tags=tag,\n",
-    "                                    bbox='103.6920359,1.1304753,104.0120359,1.4504753',\n",
-    "                                    accuracy=16, # the highest accruacy of location\n",
-    "                                    has_geo=1,\n",
-    "                                    geo_context=2, # outdoor photo\n",
-    "                                    content_type=1, # includes only photos\n",
-    "                                    per_page=250,\n",
-    "                                    page=page\n",
-    "                                    )\n",
+    "            # get photo in lxml formt\n",
+    "            result=get_photo(page,250)\n",
     "\n",
     "            # parse the result to a string and convert it a soup object\n",
     "            str_result=tostring(result, pretty_print=True).strip()\n",
@@ -145,28 +210,8 @@
     "            dictionary_photo={'id': list_id, 'title': list_title}\n",
     "            df_photos=pd.DataFrame.from_dict(dictionary_photo)\n",
     "\n",
-    "            # Getting location data\n",
-    "            list_lat=[]\n",
-    "            list_lon=[]\n",
-    "            api_condition=0\n",
-    "            for id in tqdm(list_id, desc='location',position=0, leave=True):\n",
-    "                if api_condition%4==0:\n",
-    "                    result_location=flickr.photos.geo.getLocation(api_key=api_key_1,photo_id=id)\n",
-    "                elif api_condition%4==1:\n",
-    "                    result_location=flickr.photos.geo.getLocation(api_key=api_key_2,photo_id=id)\n",
-    "                elif api_condition%4==2:\n",
-    "                    result_location=flickr.photos.geo.getLocation(api_key=api_key_3,photo_id=id)\n",
-    "                else:\n",
-    "                    result_location=flickr.photos.geo.getLocation(api_key=api_key_4,photo_id=id)\n",
-    "                str_result_location=tostring(result_location, pretty_print=True).strip()\n",
-    "                soup=bs.BeautifulSoup(str_result_location,'lxml')\n",
-    "                latitude=soup.find('location')['latitude']\n",
-    "                longitude=soup.find('location')['longitude']\n",
-    "                list_lat.append(latitude)\n",
-    "                list_lon.append(longitude)\n",
-    "\n",
-    "                # update the condition\n",
-    "                api_condition+=1\n",
+    "            # get location\n",
+    "            list_lat, list_lon=get_location(list_id)\n",
     "\n",
     "            # add lists as columns to dataframe\n",
     "            df_photos['latitude']=list_lat\n",
@@ -195,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -203,19 +248,7 @@
     {
      "output_type": "stream",
      "name": "stderr",
-     "text": "\nouter_loop:   0%|          | 0/16 [00:00<?, ?it/s]\u001b[A"
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'api_key' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-982e36c44aea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m# run the function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mflickr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi_key_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecret_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecret_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecret_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key_4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecret_4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-6-b1757af38fb9>\u001b[0m in \u001b[0;36mflickr\u001b[0;34m(api_key_1, secret_1, api_key_2, secret_2, api_key_3, secret_3, api_key_4, secret_4, tags)\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mpage\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m                 \u001b[0mflickr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mflickrapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFlickrAPI\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi_key_2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msecret\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msecret_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m                 result=flickr.photos.search(api_key=api_key,\n\u001b[0m\u001b[1;32m     25\u001b[0m                                     \u001b[0mtags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m                                     \u001b[0mbbox\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'103.6920359,1.1304753,104.0120359,1.4504753'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'api_key' is not defined"
-     ]
+     "text": "\nlocation: 100%|██████████| 60/60 [00:26<00:00,  2.29it/s]\n\nouter_loop: 100%|██████████| 16/16 [00:27<00:00,  1.70s/it]\u001b[A\n\u001b[A"
     }
    ],
    "source": [
