--- a/Singapore_demographic_analysis/flickr_singapore.ipynb
+++ b/Singapore_demographic_analysis/flickr_singapore.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,7 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import time\n",
+    "# import api keys and secrets\n",
     "from flickr_apikey import api_key_1, secret_1, api_key_2, secret_2, api_key_3, secret_3, api_key_4, secret_4"
    ]
   },
